# go-news

./: .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
src/: feed_reader.rs  main.rs
