[package]
name = "go-news"
version = "0.1.0"
edition = "2021"

[dependencies]
clokwerk = "0.4.0"
ctrlc = "3.4.5"
dotenv = "0.15.0"
feed-rs = "2.3.1"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
