[package]
name = "go-news"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.24", features = ["json"] }
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.48.0", features = ["full"] }
log ="0.4.28"
env_logger = "0.11.8"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"